Ported lint cleanup from mrlambeth-master into master.